--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
          <div class="carousel-inner" role="listbox">
          <!-- Slide 1 -->
          <div class="carousel-item active" >
-            <video class="video-fluid" autoplay loop muted>
+            <video class="vif video-fluid" autoplay loop muted>
                <source src="assets/img/backgroundvid.mp4" type="video/mp4">
             </video>
             <div class="container">
@@ -705,7 +705,7 @@
                         <br>
                      </div>
                   </div>
-                  <div class="col-lg-4 col-md-6 col-sm-4 d-md-flex align-items-md-stretch">
+                  <div class="col-lg-4 col-md-6 d-md-flex align-items-md-stretch">
                      <div class="count-box">
                         <h4 class="innova">Cross River Material Delivery System</h4>
                         <p class="innova"><br>While constructing a bridge across the mighty Chenab river, we faced a unique challenge as there was no access to the far side of the river through a road. Our team innovated a material delivery system which then became the lifeline of the project for transporting manpower and machinery successfully to the far bank of the bridge. The system consisted of an engine-run pulley system that had two carts, one for transporting materials and another for passengers. Check out the video to see it working!
