resized the innovations video

--- a/index.html
+++ b/index.html
@@ -701,19 +701,24 @@
                         <h4 class="innova">Extreme Weather Concreting</h4>
                         <p class="innova"><br>We work in the mountains where the temperatures usually touch below the freezing point on the onset of winters. In such conditions, contractors usually wind up their work and wait for the next summer season. But we work with have water heating systems and specially designed concrete mixes, which enable us to reliably pour concrete even in freezing conditions. This helps us extend our working season and extract the most out of our resources.                       
                         </p>
+                        
                         <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/innovation/innov 2.jpeg"><img src="assets/img/innovation/innov 2.jpeg" class="img-fluid" alt=""></a></div>
+                        
                         <br>
+
                      </div>
                   </div>
                   <div class="col-lg-4 col-md-6 d-md-flex align-items-md-stretch">
                      <div class="count-box">
-                        <h4 class="innova">Cross River Material Delivery System</h4>
+                        <h4 class="innova">Cross River Material        Delivery System</h4>
                         <p class="innova"><br>While constructing a bridge across the mighty Chenab river, we faced a unique challenge as there was no access to the far side of the river through a road. Our team innovated a material delivery system which then became the lifeline of the project for transporting manpower and machinery successfully to the far bank of the bridge. The system consisted of an engine-run pulley system that had two carts, one for transporting materials and another for passengers. Check out the video to see it working!
                         </p>
                         <div class="swiper-slide">
-                           <video class="ff video-fluid" autoplay loop muted>
-                              <source src="assets/img/innovation/innov 1.mp4" type="video/mp4">
-                           </video>
+                           <div class="wrrrrr">
+                              <video class="ff video-fluid" autoplay loop muted>
+                                 <source src="assets/img/innovation/innov 1.mp4" type="video/mp4">
+                              </video>
+                           </div>
                         </div>
                         <br>
                      </div>
