--- a/index.html
+++ b/index.html
@@ -421,7 +421,8 @@
                         <div class="tab-pane" id="tab-4">
 
                            <h3>Construction</h3>
-                           <p>Starting traditionally as a bridge construction company, we have diversified over the years into other types of civil construction which include roads, highways, bridges, and buildings, and drainage works. We take pride in self-performing on our projects and have a state-of-the-art fabrication facility in Jammu, J&K. We are now present in multiple states and have been associated with a large number of public clients. </p>
+                           <p>Starting traditionally as a bridge construction company, we have diversified over the years into other types of civil infrastructure works like roads, highways and buildings. We take pride in self-performing on our projects and have a state-of-the-art fabrication facility in Jammu, J&K. We are now present in multiple states and have been associated with a large number of public clients. </p>
+
                            <img src="assets/img/what we do/construction-4-1226398.jpg" alt="" class="img-fluid">
                            <p>Projects Executed:<br>
                               <i class="bi bi-check-circle"></i> Bridges<br>
@@ -435,9 +436,14 @@
                            </p>
                         </div>
                         <div class="tab-pane" id="tab-5">
-                           <h3>Fabrication                </h3>
-                           <p>Fabricating components off-site under controlled conditions enables us to achieve greater control over quality and accelerate the on-site activities. The difficult locations in which we execute our projects have limited working seasons and the practice of pre-fabrication greatly reduced our on-site activities leading to timely delivery of projects. We have expertise in the fabrication of steel bridges, sheds, prefabricated huts, precast concrete, railings, expansion joints, and wall panels. </p>
-                           <img src="assets/img/what we do/interior-production-room-metal-fabrication-plant-february-moscow-russia-interior-production-room-metal-172594227.jpg" alt="" class="img-fluid">
+                           <h3>Fabrication</h3>
+
+                           
+
+                           <p><img src="assets/img/what we do/interior-production-room-metal-fabrication-plant-february-moscow-russia-interior-production-room-metal-172594227.jpg" alt="" class="img-fluid">Fabricating components off-site under controlled conditions enables us to achieve greater control over quality and accelerate the on-site activities. The difficult locations in which we execute our projects have limited working seasons and the practice of pre-fabrication greatly reduces our on-site activities leading to timely delivery of projects. We have expertise in the fabrication of steel bridges, sheds, prefabricated huts, precast concrete, railings, expansion joints, and wall panels.</p>
+                           <br><br>
+
+
                            <p>Products Fabricated:<br>
                               <i class="bi bi-check-circle"></i> Railings<br>
                               <i class="bi bi-check-circle"></i> Trusses<br>
@@ -587,7 +593,8 @@
          <section id="counts" class="counts">
             <div class="container" data-aos="fade-up">
                <div class="row no-gutters">
-                  <div class="col-lg-4 col-md-6 d-md-flex align-items-md-stretch">
+
+                  <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
                      <div class="count-box">
                         <!--span class="icon-excavator"></span-->
                         <i class="icon-excavator"></i>
@@ -597,7 +604,7 @@
                      </div>
                   </div>
 
-                  <div class="col-lg-4 col-md-6 d-md-flex align-items-md-stretch">
+                  <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
                      <div class="count-box">
                         <i class="icon-truck"></i>
                         <span>70+</span><br>
@@ -605,13 +612,24 @@
                      </div>
                   </div>
 
-                  <div class="col-lg-4 col-md-6 d-md-flex align-items-md-stretch">
+                  <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
                      <div class="count-box">
                         <i class="icon-generator"></i>
                         <span>100+</span><br>
-                        <h3>Power Equipments</h3>
+                        <h3>Power Equipment</h3>
                      </div>
                   </div>
+
+                  <div class="col-lg-4 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-box">
+                        <i class="icon-generator"></i>
+                        <span>250+</span><br>
+                        <h3>Completed Projects</h3>
+                     </div>
+                  </div>
+
+
+               
                </div>
             </div>
          </section>
