--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
                            
 
-                           <p><img src="assets/img/what we do/interior-production-room-metal-fabrication-plant-february-moscow-russia-interior-production-room-metal-172594227.jpg" alt="" class="img-fluid">Fabricating components off-site under controlled conditions enables us to achieve greater control over quality and accelerate the on-site activities. The difficult locations in which we execute our projects have limited working seasons and the practice of pre-fabrication greatly reduces our on-site activities leading to timely delivery of projects. We have expertise in the fabrication of steel bridges, sheds, prefabricated huts, precast concrete, railings, expansion joints, and wall panels.</p>
+                           <p><img src="assets/img/what we do/interior-production-room-metal-fabrication-plant-february-moscow-russia-interior-production-room-metal-172594227.jpg" alt="" class="img-fluid">Fabricating components off-site under controlled conditions enables us to achieve greater control over quality and accelerate the on-site activities. The difficult locations in which we execute our projects have limited working season and the practice of pre-fabrication greatly reduces our on-site activities leading to a timely delivery of projects. We have expertise in the fabrication of steel bridges, sheds, prefabricated huts, precast concrete, railings, expansion joints, and wall panels.</p>
                            <br><br>
 
 
@@ -624,7 +624,7 @@
                      <div class="count-box">
                         <i class="icon-generator"></i>
                         <span>250+</span><br>
-                        <h3>Completed Projects</h3>
+                        <h4>Completed Projects</h4>
                      </div>
                   </div>
 
