justified the text

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="container col-lg-8" data-aos="fade-up">
                <div class="section-title">
                   <h2>Who We Are</h2>
-                  <p>SGF Infra is an EPC contractor with a passion for results. Ranked among the top contractors in the J&K state, we are a self-performing commercial contractor and construction manager that has grown with our clients despite working in some of the most hostile working conditions. Whether a multi-crore bridge or a small culvert, we execute every project with relentless accountability. We are a mission-driven company that aims at becoming the largest contractor in North India by 2030. Our strategies and execution approaches are aimed at building long-lasting relationships with our clients and channel partners.</p>
+                  <p class="jj">SGF Infra is an EPC contractor with a passion for results. Ranked among the top contractors in the J&K state, we are a self-performing commercial contractor and construction manager that has grown with our clients despite working in some of the most hostile working conditions. Whether a multi-crore bridge or a small culvert, we execute every project with relentless accountability. We are a mission-driven company that aims at becoming the largest contractor in North India by 2030. Our strategies and execution approaches are aimed at building long-lasting relationships with our clients and channel partners.</p>
                </div>
                <!--div class="row">
                   <div class="col-lg-6" data-aos="fade-right">
@@ -374,7 +374,7 @@
                         <div class="tab-pane active show" id="tab-1">
                            <h3>Engineering & Design
                            </h3>
-                           <p><img src="assets/img/what we do/thisisengineering-raeng-hoivM01c-vg-unsplash.jpg" alt="" class="img-fluid">Innovation in Design and Engineering is one of the key drivers of cost-efficient and stunning projects. Our design team carefully analyses the project requirements and delivers high-quality designs which are constructible, safe, and economical. With the successful completion of more than 250 projects, our impeccable track record and experience enables us to create the most cost-efficient solutions for our clients. We also have in-house capabilities for undertaking geotechnical investigation and conducting topographic surveys to arrive at the most optimal solutions.</p>
+                           <p class="jj"><img src="assets/img/what we do/thisisengineering-raeng-hoivM01c-vg-unsplash.jpg" alt="" class="img-fluid">Innovation in Design and Engineering is one of the key drivers of cost-efficient and stunning projects. Our design team carefully analyses the project requirements and delivers high-quality designs which are constructible, safe, and economical. With the successful completion of more than 250 projects, our impeccable track record and experience enables us to create the most cost-efficient solutions for our clients. We also have in-house capabilities for undertaking geotechnical investigation and conducting topographic surveys to arrive at the most optimal solutions.</p>
                            <!--li><i class="bi-check-circle"></i> Steel Bridge Design</li-->
                            <!--img src="assets/img/what we do/thisisengineering-raeng-hoivM01c-vg-unsplash.jpg" alt="" class="img-fluid"-->
                            <p>Services Offered:<br>
@@ -389,7 +389,7 @@
                         </div>
                         <div class="tab-pane" id="tab-2">
                            <h3>Preconstruction</h3>
-                           <p><img src="assets/img/what we do/dry-erase-board-1-1436693.jpg" alt="" class="img-fluid">An effective pre-construction plan defines the entire lifecycle of a project and drives the success of numerous project elements. Our preconstruction team members are passionate and trusted advocates who prioritize predictability through an aggressive and analytical approach. Our preconstruction services go well beyond traditional open-book cost projections and value engineering to create more reliable schedules and estimates you can count on. Our Takt time planning and daily work planning systems enable our clients to achieve greater control on the project schedule and manage uncertainties effectively.
+                           <p class="jj"><img src="assets/img/what we do/dry-erase-board-1-1436693.jpg" alt="" class="img-fluid">An effective pre-construction plan defines the entire lifecycle of a project and drives the success of numerous project elements. Our preconstruction team members are passionate and trusted advocates who prioritize predictability through an aggressive and analytical approach. Our preconstruction services go well beyond traditional open-book cost projections and value engineering to create more reliable schedules and estimates you can count on. Our Takt time planning and daily work planning systems enable our clients to achieve greater control on the project schedule and manage uncertainties effectively.
                            </p>
                            <!--img src="assets/img/what we do/dry-erase-board-1-1436693.jpg" alt="" class="img-fluid"-->
                            <p>Services Offered:<br>
@@ -407,7 +407,7 @@
                         <div class="tab-pane" id="tab-3">
 
                            <h3>Virtual Design & Construction</h3>
-                           <p> <img src="assets/img/what we do/sfv-fsc_bim_level_1_ne_mep.jpg" alt="" class="img-fluid">The advent of 3D modeling systems have enabled the industry to build a digital twins of projects before even setting foot on the ground. Our Virtual Design & Construction (VDC) services enable us to foresee construction-related problems that are likely to be encountered while actually executing the projects, thereby eliminating rework and losses. Depending on the requirements of the project, information models are created and effectively used before and during construction to keep track of changes and plan alignment and orientation of various components in the project.
+                           <p class="jj"> <img src="assets/img/what we do/sfv-fsc_bim_level_1_ne_mep.jpg" alt="" class="img-fluid">The advent of 3D modeling systems have enabled the industry to build a digital twins of projects before even setting foot on the ground. Our Virtual Design & Construction (VDC) services enable us to foresee construction-related problems that are likely to be encountered while actually executing the projects, thereby eliminating rework and losses. Depending on the requirements of the project, information models are created and effectively used before and during construction to keep track of changes and plan alignment and orientation of various components in the project.
                            </p>
                            <!--img src="assets/img/what we do/sfv-fsc_bim_level_1_ne_mep.jpg" alt="" class="img-fluid"-->
                            <p>Services Offered:<br>
@@ -421,7 +421,7 @@
                         <div class="tab-pane" id="tab-4">
 
                            <h3>Construction</h3>
-                           <p><img src="assets/img/what we do/construction-4-1226398.jpg" alt="" class="img-fluid">Starting traditionally as a bridge construction company, we have diversified over the years into other types of civil infrastructure works like roads, highways and buildings. We take pride in self-performing on our projects and have a state-of-the-art fabrication facility in Jammu, J&K.<br><br> We are now present in multiple states and have been associated with a large number of public clients. </p> <br>
+                           <p class="jj"><img src="assets/img/what we do/construction-4-1226398.jpg" alt="" class="img-fluid">Starting traditionally as a bridge construction company, we have diversified over the years into other types of civil infrastructure works like roads, highways and buildings. We take pride in self-performing on our projects and have a state-of-the-art fabrication facility in Jammu, J&K.<br><br> We are now present in multiple states and have been associated with a large number of public clients. </p> <br>
                            <!--img src="assets/img/what we do/construction-4-1226398.jpg" alt="" class="img-fluid"-->
                            <p>Projects Executed:<br>
                               <i class="bi bi-check-circle"></i> Bridges<br>
@@ -439,7 +439,7 @@
 
                            
 
-                           <p><img src="assets/img/what we do/interior-production-room-metal-fabrication-plant-february-moscow-russia-interior-production-room-metal-172594227.jpg" alt="" class="img-fluid">Fabricating components off-site under controlled conditions enables us to achieve greater control over quality and accelerate the on-site activities. The difficult locations in which we execute our projects have limited working season and the practice of pre-fabrication greatly reduces our on-site activities leading to a timely delivery of projects. We have expertise in the fabrication of steel bridges, sheds, prefabricated huts, precast concrete, railings, expansion joints, and wall panels.</p>
+                           <p class="jj"><img src="assets/img/what we do/interior-production-room-metal-fabrication-plant-february-moscow-russia-interior-production-room-metal-172594227.jpg" alt="" class="img-fluid">Fabricating components off-site under controlled conditions enables us to achieve greater control over quality and accelerate the on-site activities. The difficult locations in which we execute our projects have limited working season and the practice of pre-fabrication greatly reduces our on-site activities leading to a timely delivery of projects. We have expertise in the fabrication of steel bridges, sheds, prefabricated huts, precast concrete, railings, expansion joints, and wall panels.</p>
                            <br><br>
 
 
@@ -457,7 +457,7 @@
                         <div class="tab-pane" id="tab-6">
                            <h3>Manpower Services
                            </h3>
-                           <p><img src="assets/img/what we do/undraw_Grades_re_j7d6.png" alt="" class="img-fluid">Productive manpower is essential to the success of any project and with our first-hand experience in the construction of a diverse set of projects in all types of locations, we have access to a huge pool of workforce which has national as well as international working experience. Our manpower has worked in the Middle East, Africa, and Asia and has experience in all types of trades. We send manpower to international projects after conducting interviews and trade tests as per the requirements of the client and ensure a hassle-free recruitment process. 
+                           <p class="jj"><img src="assets/img/what we do/undraw_Grades_re_j7d6.png" alt="" class="img-fluid">Productive manpower is essential to the success of any project and with our first-hand experience in the construction of a diverse set of projects in all types of locations, we have access to a huge pool of workforce which has national as well as international working experience. Our manpower has worked in the Middle East, Africa, and Asia and has experience in all types of trades. We send manpower to international projects after conducting interviews and trade tests as per the requirements of the client and ensure a hassle-free recruitment process. 
                            <br>
                            These services are provided through our subsidiary, Kasuka Consulting Private Limited. For more information, reach out to us at <a href="mailto:info@kasuka.in">info@kasuka.in</a>
                            </p>
