image changes innovation

--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
                         <h4 class="innova">Design Engineering</h4>
                         <p class="innova"><br>Designing longer span bridges with the normally available E250 Grade Structural Steel was proving to be uneconomical. Our design team then did a feasibility study for procuring and using Structural Steel of higher grade, to optimise the quantities. As a result, we were able to lower our quantities by 15% thus saving on raw material & labour costs. Similarly, for concrete design, our team runs multiple simulations using advanced FEM techniques, before finalizing the design so that the material costs are optimised.                        
                         </p>
-                        <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/innovation/innov 3.png"><img src="assets/img/innovation/innov 3.png" class="img-fluid" alt=""></a></div>
+                        <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/innovation/innov 3.png"><img src="assets/img/innovation/innov 3.png" class="hehe img-fluid" alt=""></a></div>
                      </div>
                   </div>
                </div>
