--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <div class="carousel-inner" role="listbox"-->
          <!-- Slide 1 -->
          <div class="carousel-item active" >
-            <video class="vif video-fluid" autoplay loop muted>
+            <!--video class="vif video-fluid" autoplay loop muted>
                <source src="assets/img/backgroundvid.mp4" type="video/mp4">
-            </video>
+            </video-->
             <div class="container">
                <div class="overlay carausel-caption font-weight-bold text-warning">
                   <h2>Building Infrastructure for Better Tomorrow</h2>
