--- a/index.html
+++ b/index.html
@@ -70,20 +70,21 @@
             <!--video class="vif video-fluid" autoplay loop muted>
                <source src="assets/img/backgroundvid.mp4" type="video/mp4">
             </video-->
-            <div class="container">
+            <!--div class="container">
                <div class="overlay carausel-caption font-weight-bold text-warning">
                   <h2>Building Infrastructure for Better Tomorrow</h2>
-                  <!--a href="#about" class="btn-get-started scrollto">Read More</a-->
-               </div>
-            </div>
-            <!-- Slide 2 -->
-            <!--div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg)">
-               <div class="container">
-                  <h2>Lorem Ipsum Dolor</h2>
-                  <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel.</p>
                   <a href="#about" class="btn-get-started scrollto">Read More</a>
                </div>
-               </div-->
+            </div-->
+
+            <!-- Slide 2 -->
+            <div class="carousel-item" style="background-image: url(assets/img/bg.png)">
+               <div class="container">
+                  <h2>Building Infrastructure for Better Tomorrow</h2>
+                  <!--p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel.</p>
+                  <a href="#about" class="btn-get-started scrollto">Read More</a-->
+               </div>
+               </div>
          </div>
       </section>
       <!-- End Hero -->
