--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                      </div>
                      <!-- End testimonial item -->
                      <!-- End testimonial item -->
-                     <div class="swiper-slide">
+                     <!--div class="swiper-slide">
                         <div class="testimonial-item">
                            <div class="swiper-slide">
                               <a class="gallery-lightbox" href="assets/img/projects/proj.mp4">
@@ -345,7 +345,7 @@
                            <p class="jj">Design and construction of 51 mtr span steel Decked Foot bridge over Anji Nallah at Sukhal Ghati including approach path on both sides in Reasi District.
                            </p>
                         </div>
-                     </div>
+                     </div-->
                      <!-- End testimonial item -->
                   </div>
                   <div class="swiper-pagination"></div>
