--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                               <i class="bx bx-map"></i>
                               <h3>Registered Address</h3>
                               <p>SGF INFRA PRIVATE LIMITED</p>
-                              <p>F-961 Gurha Bakshi Nagar, Jammu (J&K) 180010</p>
+                              <p>F-961 Gurha Bakshi Nagar, Jammu (J&K) 180001</p>
                            </div>
                         </div>
                         <div class="col-md-6">
@@ -512,7 +512,7 @@
                               <i class="bx bx-map"></i>
                               <h3>Workshop Address</h3>
                               <br>
-                              <p>Plot no 8  Phase-II Industrial  Estate,  Gangyal, Jammu (J&K) 180010</p>
+                              <p>Plot No. 8  Phase-II Industrial  Estate,  Gangyal, Jammu (J&K) 180001</p>
                            </div>
                         </div>
                         <div class="col-md-6">
